--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
 <!-- <script src="chapter_01.js"></script>
 <script src="chapter_02.js"></script>
 <script src="chapter_03.js"></script> -->
-<script src="chapters_1-3.js"></script>
+<!-- <script src="chapters_01-03.js"></script> -->
+ <script src="chapter_04.js"></script>
+ <script src="chapter_05.js"></script>
+ <script src="chapter_06-09.js"></script>
+ <script src="chapter_09-11.js"></script>
+ <script src="chapter_04-09.js"></script>
+ <script src="chapter_10-11.js"></script>
 </html>
