--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 <script src="chapter_02.js"></script>
 <script src="chapter_03.js"></script> -->
 <!-- <script src="chapters_01-03.js"></script> -->
- <script src="chapter_04.js"></script>
+ <!-- <script src="chapter_04.js"></script>
  <script src="chapter_05.js"></script>
  <script src="chapter_06-09.js"></script>
  <script src="chapter_09-11.js"></script>
- <script src="chapter_04-09.js"></script>
- <script src="chapter_10-11.js"></script>
+ <script src="chapter_04-09.js"></script> -->
+ <!-- <script src="chapter_10-11.js"></script> --> 
+ <script src="chapter_12-13.js"></script> 
+ <script src="chapter_14-16.js"></script>
+  <script src="chapter_12-17.js"></script>
 </html>
