complete assignment chapter 17 - 20

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
  <script src="chapter_09-11.js"></script>
  <script src="chapter_04-09.js"></script> -->
  <!-- <script src="chapter_10-11.js"></script> --> 
- <script src="chapter_12-13.js"></script> 
+ <!-- <script src="chapter_12-13.js"></script> 
  <script src="chapter_14-16.js"></script>
-  <script src="chapter_12-17.js"></script>
+  <script src="chapter_12-17.js"></script> -->
+  <script src="chapter_17-20.js"></script>
 </html>
