--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
  <!-- <script src="chapter_12-13.js"></script> 
  <script src="chapter_14-16.js"></script>
   <script src="chapter_12-17.js"></script> -->
-  <script src="chapter_17-20.js"></script>
+  <!-- <script src="chapter_17-20.js"></script> -->
+   <script src="chapter_21-25.js"></script>
+   <script src="chapter_26-30.js"></script>
+   <script src="chapter_26-30.js"></script>
 </html>
