Chapters 21 to 30 completed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Assignment</title>
+    <title>JavaScript Assignments</title>
     <!-- 7. Practice placement of <script></script> element in following sections of your project in exercise 6: a. Head -->
     <!-- <script>
         alert("Welcome to the page! (Head section)");
