Chapters 31 to 40 completed!

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Assignments</title>
     <!-- 7. Practice placement of <script></script> element in following sections of your project in exercise 6: a. Head -->
     <!-- <script>
         alert("Welcome to the page! (Head section)");
     </script> -->
-</head>
-<body>
-
+  </head>
+  <body>
     <!---6. Make use of alerts in your new/existing HTML & CSS project. -->
     <!-- <h1>Welcome to My Web Page</h1>
     <p>This is an example of how to use alerts in your web project.</p>
@@ -18,24 +17,26 @@
         
         alert("Hello! This is an alert message.");
     </script> -->
-
-    
-</body>
-<!-- <script src="chapter_01.js"></script>
-<script src="chapter_02.js"></script>
-<script src="chapter_03.js"></script> -->
-<!-- <script src="chapters_01-03.js"></script> -->
- <!-- <script src="chapter_04.js"></script>
- <script src="chapter_05.js"></script>
- <script src="chapter_06-09.js"></script>
- <script src="chapter_09-11.js"></script>
- <script src="chapter_04-09.js"></script> -->
- <!-- <script src="chapter_10-11.js"></script> --> 
- <!-- <script src="chapter_12-13.js"></script> 
- <script src="chapter_14-16.js"></script>
+  </body>
+  <!-- <script src="chapter_01.js"></script>
+  <script src="chapter_02.js"></script>
+  <script src="chapter_03.js"></script> -->
+  <!-- <script src="chapters_01-03.js"></script> -->
+  <!-- <script src="chapter_04.js"></script>
+  <script src="chapter_05.js"></script>
+  <script src="chapter_06-09.js"></script>
+  <script src="chapter_09-11.js"></script>
+  <script src="chapter_04-09.js"></script> -->
+  <!-- <script src="chapter_10-11.js"></script> -->
+  <!-- <script src="chapter_12-13.js"></script> 
+  <script src="chapter_14-16.js"></script>
   <script src="chapter_12-17.js"></script> -->
   <!-- <script src="chapter_17-20.js"></script> -->
-   <script src="chapter_21-25.js"></script>
-   <script src="chapter_26-30.js"></script>
-   <script src="chapter_26-30.js"></script>
+  <!-- <script src="chapter_21-25.js"></script>
+  <script src="chapter_26-30.js"></script>
+  <script src="chapter_26-30.js"></script> -->
+  <script src="chapter_31-34.js"></script>
+  <script src="chapter_35-38.js"></script>
+  <script src="chapter_39-40.js"></script>
+   <script src="chapter_31-40.js"></script>
 </html>
