Chapter 38 to 48 completed!

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Assignments</title>
+    <link rel="stylesheet" href="style.css">
     <!-- 7. Practice placement of <script></script> element in following sections of your project in exercise 6: a. Head -->
     <!-- <script>
         alert("Welcome to the page! (Head section)");
@@ -17,6 +18,85 @@
         
         alert("Hello! This is an alert message.");
     </script> -->
+
+    <!--- Assignment_43-48 (EVENTS) -->
+
+    <!--Question_1-->
+
+     <a href="#" id="alertLink">Click here</a>
+
+    <!--Question_2-->
+
+   <div class="image-gallery">
+    <div class="image-item" data-msg="You clicked Mobile 1">
+      <img src="images/img_1.jpg" alt="Mobile 1" />
+      <div class="image-name">Mobile 1</div>
+    </div>
+    <div class="image-item" data-msg="You clicked Mobile 2">
+      <img src="images/img_2.jpg" alt="Mobile 2" />
+      <div class="image-name">Mobile 2</div>
+    </div>
+    <div class="image-item" data-msg="You clicked Mobile 3">
+      <img src="images/img_3.jpg" alt="Mobile 3" />
+      <div class="image-name">Mobile 3</div>
+    </div>
+    <div class="image-item" data-msg="You clicked Mobile 4">
+      <img src="images/img_4.jpg" alt="Mobile 4" />
+      <div class="image-name">Mobile 4</div>
+    </div>
+  </div>
+
+   <!--Question_3-->
+
+ <h2>Before Delete Table (Click Delete to Remove from Below)</h2>
+  <table id="beforeTable">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Grade</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- JavaScript will add rows here -->
+    </tbody>
+  </table>
+
+  <h2 id="afterHeading" style="display:none;">After Delete Table (Updated)</h2>
+  <table id="afterTable" style="display:none;">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Grade</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- JavaScript will add rows here -->
+    </tbody>
+  </table>
+
+  <!--Question_4-->
+
+  <img
+    id="flower"
+    src="images/rose_1.jpg"  
+    alt="Red Rose"
+  />
+ 
+  <!--Question_5-->
+
+   <div id="counter-container">
+    <h2>Counter</h2>
+    <div id="count">0</div>
+    <button id="decrease">Decrease</button>
+    <button id="increase">Increase</button>
+  </div>
+
+
   </body>
   <!-- <script src="chapter_01.js"></script>
   <script src="chapter_02.js"></script>
@@ -35,8 +115,10 @@
   <!-- <script src="chapter_21-25.js"></script>
   <script src="chapter_26-30.js"></script>
   <script src="chapter_26-30.js"></script> -->
-  <script src="chapter_31-34.js"></script>
+  <!-- <script src="chapter_31-34.js"></script>
   <script src="chapter_35-38.js"></script>
   <script src="chapter_39-40.js"></script>
-   <script src="chapter_31-40.js"></script>
+   <script src="chapter_31-40.js"></script> -->
+   <script src="chapter_38-44.js"></script>
+   <script src="chapter_43-48.js"></script>
 </html>
